@@ -1,3 +1,9 @@
+2008-03-06  Johan Dahlin  <jdahlin@async.com.br>
+
+	* flumotion/component/encoders/wma/wma_wizard.py:
+	* flumotion/component/encoders/wmv/wmv_wizard.py:
+	Mark the plugins as implementing IEncoderPlugin
+
 2008-03-06  Johan Dahlin  <johan@gnome.org>
 
 	* flumotion/component/encoders/wma/wma_wizard.py:
